{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 18,
  "lineage": "728898d8-c101-2cf2-2df6-1d08e3feb981",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-060e277c0d4cce553",
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:instance/i-076872fa7e356a2da",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076872fa7e356a2da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c01708c68260c89b"
              }
            ],
            "primary_network_interface_id": "eni-0c01708c68260c89b",
            "private_dns": "ip-10-0-1-114.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_ip": "46.137.202.37",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04125ce78db671af6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f765f4d5164088c",
            "tags": {
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Name": "WebServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034c100bf222c0239"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "i-076872fa7e356a2da",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-060e277c0d4cce553",
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:instance/i-0597a33a618e20083",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0597a33a618e20083",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06f46005ae98f1479"
              }
            ],
            "primary_network_interface_id": "eni-06f46005ae98f1479",
            "private_dns": "ip-10-0-2-194.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.194",
            "public_ip": "18.142.255.16",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085bc89257fa85720",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f3dbeea93c6d57f",
            "tags": {
              "Name": "WebServer-2"
            },
            "tags_all": {
              "Name": "WebServer-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034c100bf222c0239"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "i-0597a33a618e20083",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:internet-gateway/igw-0e4d5d688262a0144",
            "id": "igw-0e4d5d688262a0144",
            "owner_id": "148849677048",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:loadbalancer/app/MyALB/725165e46311bfb9",
            "arn_suffix": "app/MyALB/725165e46311bfb9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "MyALB-55861597.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:loadbalancer/app/MyALB/725165e46311bfb9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MyALB",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-01ee02b8f545bfb3f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f3dbeea93c6d57f"
              },
              {
                "subnet_id": "subnet-03f765f4d5164088c"
              }
            ],
            "subnets": [
              "subnet-00f3dbeea93c6d57f",
              "subnet-03f765f4d5164088c"
            ],
            "tags": {
              "Name": "MyALB"
            },
            "tags_all": {
              "Name": "MyALB"
            },
            "vpc_id": "vpc-082e4cf46abdc7838",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:loadbalancer/app/MyALB/725165e46311bfb9"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:listener/app/MyALB/725165e46311bfb9/11a4768536364360",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:listener/app/MyALB/725165e46311bfb9/11a4768536364360",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:loadbalancer/app/MyALB/725165e46311bfb9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:listener/app/MyALB/725165e46311bfb9/11a4768536364360"
          },
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec",
            "arn_suffix": "targetgroup/WebTG/7403577baa84ddec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec-20251121164746100100000004",
            "port": 80,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec",
            "target_id": "i-076872fa7e356a2da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.web_key",
            "aws_lb_target_group.web_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec-20251121164746468600000005",
            "port": 80,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:148849677048:targetgroup/WebTG/7403577baa84ddec",
            "target_id": "i-0597a33a618e20083"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.web_key",
            "aws_lb_target_group.web_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:route-table/rtb-0436327b38b3077de",
            "id": "rtb-0436327b38b3077de",
            "owner_id": "148849677048",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4d5d688262a0144",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "rtb-0436327b38b3077de",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7cee66dd07bf03a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0436327b38b3077de",
            "subnet_id": "subnet-03f765f4d5164088c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f783762d87ca77ff",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0436327b38b3077de",
            "subnet_id": "subnet-00f3dbeea93c6d57f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:security-group/sg-01ee02b8f545bfb3f",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ee02b8f545bfb3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "148849677048",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "sg-01ee02b8f545bfb3f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:security-group/sg-034c100bf222c0239",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034c100bf222c0239",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2SecurityGroup",
            "name_prefix": "",
            "owner_id": "148849677048",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "sg-034c100bf222c0239",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:subnet/subnet-03f765f4d5164088c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f765f4d5164088c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148849677048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "subnet-03f765f4d5164088c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:subnet/subnet-00f3dbeea93c6d57f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f3dbeea93c6d57f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148849677048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-082e4cf46abdc7838"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "subnet-00f3dbeea93c6d57f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:148849677048:vpc/vpc-082e4cf46abdc7838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057997860b27a177f",
            "default_route_table_id": "rtb-09d3b105b41bf11e4",
            "default_security_group_id": "sg-0f286eb73ffaddbda",
            "dhcp_options_id": "dopt-0b111d8de577d29c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082e4cf46abdc7838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d3b105b41bf11e4",
            "owner_id": "148849677048",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "148849677048",
            "id": "vpc-082e4cf46abdc7838",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}